# pi-agent-transcripts

./: README.md  pyproject.toml
.long-task-harness/: features.json  long-task-progress.md
src/claude_code_transcripts/: __init__.py
src/pi_agent_transcripts/: __init__.py
src/pi_agent_transcripts/templates/: base.html  index.html  page.html
tests/: conftest.py  sample_pi_session.jsonl  test_generate_html.py
