[project]
name = "pi-agent-transcripts"
version = "0.4"
description = "Convert Claude Code and Pi agent session files to HTML transcripts"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Simon Willison" }
]
requires-python = ">=3.10"
dependencies = [
    "click",
    "click-default-group",
    "httpx",
    "jinja2",
    "markdown",
    "questionary",
]

[project.urls]
Homepage = "https://github.com/tmustier/pi-agent-transcripts"
Changelog = "https://github.com/tmustier/pi-agent-transcripts/releases"
Issues = "https://github.com/tmustier/pi-agent-transcripts/issues"
CI = "https://github.com/tmustier/pi-agent-transcripts/actions"

[project.scripts]
pi-agent-transcripts = "pi_agent_transcripts:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-httpx>=0.35.0",
    "syrupy>=5.0.0",
]
